# Conductino-Android

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  project_mapper.py  settings.gradle
.github/: WORKFLOW_README.md  android-test.yml  auto-release.yml  notify-on-failure.yml
.github/workflows/: ci.yml  gradle.yml
Conductino-Android/: LICENSE  README.md
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/aurora/browser/: BrowserActivityTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/config/: search_engines.json  settings.json
app/src/main/assets/ui/devtools/: logic.js
app/src/main/assets/ui/document/: index.html  logic.js  style.css
app/src/main/assets/ui/error/: index.html
app/src/main/assets/ui/results/: logic.js  style.css
app/src/main/assets/ui/search/: logic.js  style.css
app/src/main/assets/ui/welcome/: index.html
app/src/main/cpp/: CMakeLists.txt  core.c  html_parser.c  jni_bridge.c  storage.c
app/src/main/cpp/features/: README.md
app/src/main/cpp/features/archive/: README.md
app/src/main/cpp/features/crypto/: README.md
app/src/main/cpp/features/image/: README.md
app/src/main/cpp/features/media/: README.md
app/src/main/cpp/features/net/: README.md
app/src/main/cpp/features/pdf/: README.md
app/src/main/cpp/features/text/: README.md
app/src/main/cpp/include/: aurora_core.h
app/src/main/java/com/aurora/browser/: AuroraApplication.java  (+1 more)
app/src/main/res/layout/: activity_browser.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
(+21 files in other folders)
